Remove additional sidebar from 404 page

--- a/app/design/frontend/Satoshi/Hyva/Magento_Cms/layout/cms_noroute_index_id_no-route.xml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Cms/layout/cms_noroute_index_id_no-route.xml
@@ -9,6 +9,7 @@
         <move element="page.main.title" destination="page_404"/>
         <move element="cms_noroute" destination="page_404"/>
         <move element="cms_page" destination="page_404"/>
-        <referenceBlock name="cms_page_container" remove="true" />
+        <referenceBlock name="cms_page_container" remove="true"/>
+        <referenceBlock name="div.sidebar.additional" remove="true"/>
     </body>
 </page>
