--- a/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/app.scss
+++ b/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/app.scss
@@ -157,7 +157,7 @@ h3 {
 }
 
 .main-sidebar {
-  @apply relative col-span-1 transition-all;
+  @apply relative col-span-1 transition-all mb-5;
 }
 
 .grid-columns-plp .main-sidebar {
