Fix conflicting my account heading

--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/layout/customer_account.xml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/layout/customer_account.xml
@@ -19,11 +19,7 @@
             </block>
         </referenceContainer>
 
-        <referenceBlock name="page.main.title">
-            <arguments>
-                <argument name="css_class" xsi:type="string">content-wrapper mx-auto max-md:hidden my-8</argument>
-            </arguments>
-        </referenceBlock>
+        <referenceBlock name="page.main.title" template="Magento_Customer::account/title.phtml" />
 
         <!-- Remove footer-content block from customer account pages -->
         <referenceBlock name="footer-content" remove="true" />
