--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-button.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-button.phtml
@@ -23,6 +23,7 @@ $cartTotals = $cart->getSerializedCartTotals();
     x-init="() => {
         $store.cart.setCartTotals(<?= $escaper->escapeHtmlAttr($cartTotals) ?>)
         $store.cart.setErrorMessage(`<?= $escaper->escapeHtmlAttr($block->getMiniCartErrorMessage()) ?>`)
+        $store.cart.setProductCartErrorMessage(`<?= $escaper->escapeHtmlAttr($block->getProductCartErrorMessage()) ?>`)
     }"
     id="cart-button"
     class="contrast-border md:button--filled-secondary button ghost-primary icon-button icon-button--size-lg col-start-5"
