--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/gallery.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/gallery.phtml
@@ -46,55 +46,57 @@ $productName = $block->getProduct()->getName();
 >
     <!-- Appended variant images  -->
     <template x-for="(image, index) in appendedImages" :key="index">
-        <div
-            class="animate-on-transition relative aspect-product flex-shrink-0 overflow-hidden border-black md:rounded-2xl"
-            x-data="{ fadeInAppend: false }"
-            x-init="$nextTick(() => { fadeInAppend = true })"
-            x-show="fadeInAppend"
-            x-transition
-        >
-            <div class="flex items-center justify-center size-full bg-[--fade-in-bg] <?= $isContain ? 'p-[4%]' : '' ?>">
-                <img
-                    :alt="image.caption || '<?= $escaper->escapeJs($productName) ?>'"
-                    :title="image.caption || '<?= $escaper->escapeJs($productName) ?>'"
-                    class="object-center <?= $mixBackground ? 'mix-blend-darken' : '' ?> <?= $isContain ? 'object-contain rounded-2xl max-h-full w-auto' : 'object-cover size-full' ?>"
-                    :src="image.img"
-                    alt=""/>
+        <div class="aspect-product">
+            <div
+                class="animate-on-transition relative aspect-product flex-shrink-0 overflow-hidden border-black md:rounded-2xl"
+                x-data="{ fadeInAppend: false }"
+                x-init="$nextTick(() => { fadeInAppend = true })"
+                x-show="fadeInAppend"
+                x-transition
+            >
+                <div class="flex items-center justify-center size-full bg-[--fade-in-bg] <?= $isContain ? 'p-[4%]' : '' ?>">
+                    <img
+                        :alt="image.caption || '<?= $escaper->escapeJs($productName) ?>'"
+                        :title="image.caption || '<?= $escaper->escapeJs($productName) ?>'"
+                        class="object-center <?= $mixBackground ? 'mix-blend-darken' : '' ?> <?= $isContain ? 'object-contain rounded-2xl max-h-full w-auto' : 'object-cover size-full' ?>"
+                        :src="image.img"
+                        alt=""/>
 
-                <!-- Play button -->
-                <button
-                    x-show="image.type === 'video'"
-                    type="button"
-                    class="group absolute inset-0 grid place-items-center"
-                    aria-label="<?= $escaper->escapeHtmlAttr(__('Play video')) ?>"
-                    @click="activateVideo(image.position)"
-                    @keydown.enter="activateVideo(image.position)"
-                    x-cloak
-                >
-                    <?= $heroiconsSolid->playHtml(
-                        'stroke-white/75 fill-black/20 transition ease-in group-hover:scale-110 md:w-24 md:h-24',
-                        44,
-                        44,
-                        ['aria-hidden' => 'true']
-                    ); ?>
-                </button>
+                    <!-- Play button -->
+                    <button
+                        x-show="image.type === 'video'"
+                        type="button"
+                        class="group absolute inset-0 grid place-items-center"
+                        aria-label="<?= $escaper->escapeHtmlAttr(__('Play video')) ?>"
+                        @click="activateVideo(image.position)"
+                        @keydown.enter="activateVideo(image.position)"
+                        x-cloak
+                    >
+                        <?= $heroiconsSolid->playHtml(
+                            'stroke-white/75 fill-black/20 transition ease-in group-hover:scale-110 md:w-24 md:h-24',
+                            44,
+                            44,
+                            ['aria-hidden' => 'true']
+                        ); ?>
+                    </button>
 
-                <!-- Youtube container -->
-                <div class="absolute inset-0 hidden size-full bg-bg-400"
-                    :class="{ 'hidden': activeVideoType !== 'youtube' }"
-                    x-transition.opacity.duration.500ms
-                    x-show="image.type === 'video' && activeVideoType === 'youtube'"
-                >
-                    <div :id="`youtube-player-${image.position}`" class="size-full"></div>
-                </div>
+                    <!-- Youtube container -->
+                    <div class="absolute inset-0 hidden size-full bg-bg-400"
+                        :class="{ 'hidden': activeVideoType !== 'youtube' }"
+                        x-transition.opacity.duration.500ms
+                        x-show="image.type === 'video' && activeVideoType === 'youtube'"
+                    >
+                        <div :id="`youtube-player-${image.position}`" class="size-full"></div>
+                    </div>
 
-                <!-- Video container -->
-                <div class="absolute inset-0 hidden size-full bg-bg-400"
-                    :class="{ 'hidden': activeVideoType !== 'vimeo' }"
-                    x-transition.opacity.duration.500ms
-                    x-show="image.type === 'video' && activeVideoType === 'vimeo'"
-                >
-                    <div :id="`vimeo-player-${image.position}`" class="size-full"></div>
+                    <!-- Video container -->
+                    <div class="absolute inset-0 hidden size-full bg-bg-400"
+                        :class="{ 'hidden': activeVideoType !== 'vimeo' }"
+                        x-transition.opacity.duration.500ms
+                        x-show="image.type === 'video' && activeVideoType === 'vimeo'"
+                    >
+                        <div :id="`vimeo-player-${image.position}`" class="size-full"></div>
+                    </div>
                 </div>
             </div>
         </div>
