INTERNAL-411-163; resolve accessibility issue by correcting  attribute usage

--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/menu/menu-items.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/menu/menu-items.phtml
@@ -71,7 +71,7 @@ if (!$menuItems) {
                     'menu__back-button--visible max-md:animate-slideIconIn motion-reduce:translate-x-0': history.length !== 1,
                     'max-md:animate-slideIconOut motion-reduce:-translate-x-full': history.length == 1
                 }"
-                :tab-index="history.length === 1 ? -1 : 0"
+                :tabindex="history.length === 1 ? -1 : 0"
                 :aria-hidden="history.length === 1"
             >
                 <?= $hyvaicons->renderHtml('chevron-left'); ?>
