INTERNAL-411-161; fix pages padding bottom

--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/slider/product-slider-container.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/slider/product-slider-container.phtml
@@ -69,6 +69,6 @@ echo $template
         'title' => $title,
         'id' => $name,
         'is_full_page' => true,
-        'class' => 'py-9',
+        'class' => 'pt-9',
     ])
     ->render('Magento_Catalog::html/slider.phtml');
